# origen

./: .gitignore  .pre-commit-config.yaml  API_VISUALIZATION_GUIDE.md  BACKGROUND_REJECTION_DEMO.md  Cargo.toml  GRAFANA_AUTO_CONFIG.md  GRAFANA_GUIDE.md  GRAFANA_QUICKSTART.md  INTEGRATION_COMPLETE.md  KAFKA_STREAMING.md  O4_KAFKA_DEMO.md  OPTICAL_INTEGRATION.md  README.md  REDIS_STATE_PERSISTENCE.md  THREE_WAY_CORRELATION_DEMO.md  aladin_demo.html  book.toml  dashboard.html  debug_dashboard.html  docker-compose.yml  grafana_panel.html  mkdocs.yml  prometheus.yml  run_demo.sh  skymap_dashboard.html  test_api.sh  test_skymap.html
.github/workflows/: ci.yml  docs.yml
config/: config.example.toml
crates/mm-api/: Cargo.toml
crates/mm-api/src/: client.rs  lib.rs
crates/mm-boom/: Cargo.toml
crates/mm-boom/src/: consumer.rs  lib.rs  parser.rs  simulator.rs
crates/mm-config/: Cargo.toml
crates/mm-config/src/: lib.rs
crates/mm-core/: Cargo.toml
crates/mm-core/src/: early_rates.rs  error.rs  events.rs  explosion_time.rs  fit_quality.rs  gp_features.rs  io.rs  lib.rs  lightcurve.rs  lightcurve_fitting.rs  multistart_fitter.rs  optical.rs  position.rs  pso_fitter.rs  redis_compat.rs  skymap.rs  skymap_parser.rs  skymap_storage.rs  skymap_tests.rs  svi_fitter.rs  svi_models.rs  t0_profile.rs  time.rs
crates/mm-core/tests/: debug_catastrophic_elbo.rs  debug_normalization.rs  diagnose_outliers.rs  diagnose_t0_bias.rs  find_peak_time.rs  fixtures_test.rs  lightcurve_fitting_test.rs  optimize_t0_recovery.rs  plot_lightcurve_fits.rs  plot_synthetic_kilonova.rs  simulate_and_fit_kilonova.rs  test_afterglow_fitting.rs  test_early_rate_discrimination.rs  test_fit_quality.rs  test_multistart.rs  test_retry_strategy.rs  test_t0_profile.rs  test_t0_profile_conservative.rs  test_t0_profile_fast.rs  test_t0_variance.rs  validate_t0_constraints.rs  verify_bias_fix.rs
crates/mm-correlator/: Cargo.toml
crates/mm-correlator/src/: config.rs  correlator.rs  daily_report.rs  lib.rs  spatial.rs  superevent.rs  temporal.rs
crates/mm-correlator/tests/: correlation_tests.rs
crates/mm-gcn/: Cargo.toml
crates/mm-gcn/src/: lib.rs  router.rs
crates/mm-gcn/src/parsers/: grb.rs  gw.rs  mod.rs  neutrino.rs  xray.rs
crates/mm-redis/: Cargo.toml  README.md  RECOVERY_DEMO.md
crates/mm-redis/src/: lib.rs  recovery_tests.rs  schema.rs  store.rs  tests.rs
crates/mm-service/: Cargo.toml
crates/mm-service/src/: main.rs
crates/mm-service/tests/: state_recovery_integration.rs
crates/mm-simulation/: Cargo.toml
crates/mm-simulation/examples/: grb_visibility_analysis.rs  multimessenger_simulation.rs  o4_joint_far_analysis.rs  o4_magnitude_distributions.rs  origin_o4_pipeline.rs  survey_sensitivity_comparison.rs
crates/mm-simulation/src/: afterglow.rs  background_grbs.rs  background_optical.rs  ejecta_properties.rs  far_campaign.rs  gcn_circular.rs  grb_localization.rs  grb_simulation.rs  joint_far.rs  lib.rs  optical_injection.rs  rotation.rs  runner.rs  satellite.rs  voevent.rs
crates/mm-simulation/tests/: far_campaign_integration.rs
data/far_calibration/: README.md
docs/: O4_afterglow_magnitude_distributions.md  O4_joint_far_analysis.md  O4_multiMessenger_detection_summary.md  O4_vs_O5c_comparison.md  RAVEN_COMPARISON.md  grb_simulation.md  grb_simulation_enhancements.md  index.md  kilonova_model_validation.md  lightcurve_fitting_integration.md  magnitude_based_afterglow_detection.md  retry_strategy_implementation.md  stability_fixes.md  svi_fitting_implementation.md  t0_bias_fix.md  t0_profile_likelihood.md  t0_profile_optimizations.md  t0_recovery_performance.md
docs/analysis/: afterglow-magnitudes.md  o4-detection-summary.md  o4-joint-far.md  o4-vs-o5.md
docs/architecture/: crates.md  overview.md  raven-comparison.md
docs/examples/: lightcurve-classification.md
docs/getting-started/: configuration.md  installation.md
docs/javascripts/: mathjax.js
docs/overrides/: main.html
docs/physics/: afterglow-detection.md  grb-simulation.md  kilonova-validation.md  lightcurve-fitting.md  population-model.md
docs/services/: daily-comparison.md  far-campaign.md
docs/src/: SUMMARY.md  architecture.md  configuration.md  crates.md  daily-comparison.md  far-campaign.md  getting-started.md  introduction.md  population-model.md
grafana/dashboards/: multi-messenger-correlations.json  multi-messenger-events.json  multi-messenger.json  o4-mma-correlations.json
grafana/plugins/mm-aladin-skymap/: plugin.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: mm-api.yml  prometheus.yml
paper/: generate_figures.py  origin_paper.tex
scripts/: demo_state_recovery.sh  restart-demo-slow.sh  start-grafana-demo.sh
scripts/analysis/: README.md  analyze_grb_error_radii.py  plot_early_rate_discrimination.py  plot_far_campaign.py  plot_instrument_comparison.py  plot_lightcurve_discrimination.py  plot_optical_far_calibration.py  plot_raven_comparison.py  plot_raven_comparison_cdf.py  plot_t0_constraints.py
tests/fixtures/: README.md
tests/fixtures/lightcurves_csv/: ZTF25aaaalin.csv  ZTF25aaaawig.csv  ZTF25aaabezb.csv  ZTF25aaabnwi.csv  ZTF25aaabnxh.csv  ZTF25aaacrjj.csv  ZTF25aaadqsi.csv  ZTF25aaadytl.csv  ZTF25aaaecsu.csv  ZTF25aaaeykb.csv
tests/fixtures/observing_scenarios/: 0.fits  1.fits  2.fits  3.fits  4.fits  5.fits  6.fits  7.fits  8.fits  9.fits
