[workspace]
members = [
    "crates/mm-core",
    "crates/mm-gcn",
    "crates/mm-correlator",
    "crates/mm-boom",
    "crates/mm-config",
    "crates/mm-redis",
    "crates/mm-service",
    "crates/mm-simulation",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ORIGIN Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# GCN Kafka (CRITICAL for Phase 1)
gcn-kafka = "0.1"
rdkafka = { version = "0.39", features = ["tokio", "ssl", "sasl"] }

# Serialization (for parsing GCN alerts)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
apache-avro = { version = "0.16", features = ["snappy"] }
csv = "1.3"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time handling (GPS time conversions)
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Astronomy (for later phases)
healpix = "0.3"
fitsio = "0.21"
moc = "0.19"  # Multi-Order Coverage maps
cdshealpix = "0.7"  # Accurate HEALPix coordinate conversions

# Utilities
ordered-float = "4.2"
rand = "0.8"
rand_distr = "0.4"
quick-xml = "0.36"  # XML parsing for VOEvent
plotters = "0.3"    # Plotting for visualizations
rayon = "1.10"      # Parallel iterators for grid search

# Optimization (for PSO + SVI light curve fitting)
argmin = "0.11"
argmin-math = { version = "0.5", features = ["vec"] }

# HTTP client for skymap downloads
reqwest = { version = "0.12", features = ["rustls-tls"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
