[package]
name = "mm-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
mm-core = { path = "../mm-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cdshealpix = { workspace = true }
moc = { workspace = true }
