[package]
name = "mm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
csv = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
healpix = { workspace = true }
fitsio = { workspace = true }
moc = { workspace = true }
cdshealpix = { workspace = true }
argmin = { workspace = true }
argmin-math = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
walkdir = "2.5"
plotters = { workspace = true }
