[package]
name = "mm-simulation"
version.workspace = true
edition.workspace = true

[dependencies]
mm-core = { path = "../mm-core" }
mm-correlator = { path = "../mm-correlator" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
cdshealpix = { workspace = true }
fitsio = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

# XML parsing for VOEvent
quick-xml = "0.36"

# SQLite for O4 event database
rusqlite = "0.32"

# CLI for examples
clap = { workspace = true }
